--- a/README
+++ b/README
@@ -4,7 +4,7 @@ annotations.  Initially these are stored as Wagn cards and accessed via XML
 using an experimental XML interface to Wagn.
 
 cardtest.lzx    First test app, scrollable window to app in:
-cardlist.lzx    Data sources and a display class for query and cardlists
+cardlist.lzx    Data sources and a display class for query and cardlists (use <list> instead)
 getnote.lzs     Script code to search the returned XML, turn it into local XML
 cardview.lzx    View for a single card
 wagnxml.lzx     External request (Wagn cards) code
